--- a/js_lessons/1/index.html
+++ b/js_lessons/1/index.html
@@ -10,8 +10,9 @@
 <body>
     <script>
         // Задача: Объявите переменную x и присвойте ей значение 5.
-        let x;
-        // Ваш код здесь
+
+        let x = 5;
+        
         console.log(x); // Должно вывести 5
 
     </script>
