--- a/js_lessons/2/index.html
+++ b/js_lessons/2/index.html
@@ -10,10 +10,12 @@
 <body>
     <script>
         // Задача: Напишите функцию, которая возвращает удвоенное значение своего аргумента.
+        
         function doubleValue(value) {
-            // Ваш код здесь
+            return value * 2;
         }
-        console.log(doubleValue(7)); // Должно вывести 14
+        
+        console.log(doubleValue(30))
 
     </script>
 </body>
