--- a/js_lessons/3/index.html
+++ b/js_lessons/3/index.html
@@ -10,7 +10,11 @@
 <body>
     <script>
         // Задача: Допишите код для добавления числа 42 в конец массива.
+
         let numbers = [1, 2, 3, 4];
+
+        numbers.push(42)
+
         // Ваш код здесь
         console.log(numbers); // Должно вывести [1, 2, 3, 4, 42]
 
