js 2.0 срфтпу дуыы

--- a/JavaScript 2.0/10/index.html
+++ b/JavaScript 2.0/10/index.html
@@ -8,10 +8,9 @@
 </head>
 <body>
 
-    <!-- Генератор случайных паролей:
-        Создайте форму, включающую опции для выбора длины пароля и типа символов (буквы, цифры, спецсимволы).
-        Используйте JavaScript для генерации случайного пароля в соответствии с выбранными параметрами.
-        Отобразите сгенерированный пароль на странице. -->
+    <!-- Слайдер
+
+    С помощью библиотеки Slick.js сделать слайдер на странице. Стилизовать его, чтоб он хорошо отображался на странице -->
     
 <script src="./script.js"></script>
 </body>
