--- a/JavaScript 2.0/4/index.html
+++ b/JavaScript 2.0/4/index.html
@@ -11,7 +11,7 @@
     <!-- Изменение стилей:
 
     Создайте HTML-элемент (например, квадрат).
-    Добавьте кнопки для изменения его цвета, размера и других стилевых свойств -->
+    Добавьте кнопки для изменения его цвета, размера и других стилевых свойств на ваше усмотрение -->
     
 <script src="./script.js"></script>
 </body>
